<resources>
    <string name="app_name">fine</string>
    <string name="title_home">홈</string>
    <string name="title_friendList">친구</string>
    <string name="title_chatList">채팅</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_myPage">마이</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>