<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fine_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_home_recommend"
            app:destination="@id/navigation_home_recommend" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_friendList2"
            app:destination="@id/navigation_friendList" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_chatList"
            app:destination="@id/navigation_chatList" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_community"
            app:destination="@id/navigation_community" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_myPage"
            app:destination="@id/navigation_myPage" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home_recommend"
        android:name="com.fine_app.ui.home.FriendRecommendFragment"
        android:label="매칭"
        tools:layout="@layout/fragment_home_friend_recommend" >
        <action
            android:id="@+id/action_navigation_home_recommend_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_home_recommend_to_navigation_friendList"
            app:destination="@id/navigation_friendList" />
        <action
            android:id="@+id/action_navigation_home_recommend_to_navigation_chatList"
            app:destination="@id/navigation_chatList" />
        <action
            android:id="@+id/action_navigation_home_recommend_to_navigation_myPage"
            app:destination="@id/navigation_myPage" />
        <action
            android:id="@+id/action_navigation_home_recommend_to_navigation_community"
            app:destination="@id/navigation_community" />
    </fragment>

    <fragment
        android:id="@+id/navigation_friendList"
        android:name="com.fine_app.ui.friendList.FriendListFragment"
        android:label="@string/title_friendList"
        tools:layout="@layout/fragment_friendlist" >
        <action
            android:id="@+id/action_navigation_friendList_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_friendList_to_navigation_chatList"
            app:destination="@id/navigation_chatList" />
        <action
            android:id="@+id/action_navigation_friendList_to_navigation_myPage"
            app:destination="@id/navigation_myPage" />
        <action
            android:id="@+id/action_navigation_friendList_to_navigation_community"
            app:destination="@id/navigation_community" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chatList"
        android:name="com.fine_app.ui.chatList.ChatListFragment"
        android:label="@string/title_chatList"
        tools:layout="@layout/fragment_chatlist" >
        <action
            android:id="@+id/action_navigation_chatList_to_navigation_home_recommend"
            app:destination="@id/navigation_home_recommend" />
        <action
            android:id="@+id/action_navigation_chatList_to_navigation_myPage"
            app:destination="@id/navigation_myPage" />
        <action
            android:id="@+id/action_navigation_chatList_to_navigation_community"
            app:destination="@id/navigation_community" />
        <action
            android:id="@+id/action_navigation_chatList_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_chatList_to_navigation_friendList"
            app:destination="@id/navigation_friendList" />
    </fragment>

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.fine_app.ui.community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" >
        <action
            android:id="@+id/action_navigation_community_to_navigation_friendList"
            app:destination="@id/navigation_friendList" />
        <action
            android:id="@+id/action_navigation_community_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_community_to_navigation_home_recommend"
            app:destination="@id/navigation_home_recommend" />
        <action
            android:id="@+id/action_navigation_community_to_navigation_chatList"
            app:destination="@id/navigation_chatList" />
        <action
            android:id="@+id/action_navigation_community_to_navigation_myPage"
            app:destination="@id/navigation_myPage" />
    </fragment>

    <fragment
        android:id="@+id/navigation_myPage"
        android:name="com.fine_app.ui.MyPage.MyPageFragment"
        android:label="@string/title_myPage"
        tools:layout="@layout/fragment_mypage" >
        <action
            android:id="@+id/action_navigation_myPage_to_navigation_chatList"
            app:destination="@id/navigation_chatList" />
        <action
            android:id="@+id/action_navigation_myPage_to_navigation_friendList"
            app:destination="@id/navigation_friendList" />
        <action
            android:id="@+id/action_navigation_myPage_to_navigation_home_recommend"
            app:destination="@id/navigation_home_recommend" />
        <action
            android:id="@+id/action_navigation_myPage_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_myPage_to_navigation_community"
            app:destination="@id/navigation_community" />
    </fragment>

</navigation>